--- a/02.03-Resources-Providers&Data.MD
+++ b/02.03-Resources-Providers&Data.MD
@@ -1,13 +1,13 @@
 ## 🔌 Terraform Providers
 
 ### What Are Providers?
-Providers are plugins that enable Terraform to interact with various APIs, such as those of cloud platforms (e.g., AWS, Azure, GCP) and SaaS services. Each provider offers a set of resource types and data sources that Terraform can manage
+Providers are plugins that enable Terraform to interact with various APIs, such as those of cloud platforms (e.g., AWS, Azure, GCP) and SaaS services. Each provider offers a set of resource types and data sources that Terraform can manage
 
 ### Key Points:
 
-- **Installation**:Terraform automatically installs required providers during the `terraform init` process
-- **Versioning**:It's recommended to specify provider versions to ensure consistent behavior across deployments
-- **Configuration**:Providers often require configuration parameters like region or authentication credentials
+- **Installation**:Terraform automatically installs required providers during the `terraform init` process
+- **Versioning**:It's recommended to specify provider versions to ensure consistent behavior across deployments
+- **Configuration**:Providers often require configuration parameters like region or authentication credentials
 
 ### Example:
 
@@ -31,13 +31,13 @@ provider "aws" {
 ## 📡 Terraform Data Sources
 
 ### What Are Data Sources?
-Data sources allow Terraform to fetch information from external sources or existing infrastructure not managed by the current configuration. This enables dynamic referencing of existing resource.
+Data sources allow Terraform to fetch information from external sources or existing infrastructure not managed by the current configuration. This enables dynamic referencing of existing resource.
 
 ### Use Cases:
 
- Retrieve existing resource details (e.g., AMI IDs, VPC IDs.
- Access outputs from other Terraform configuration.
- Incorporate data from external systems or API.
+ Retrieve existing resource details (e.g., AMI IDs, VPC IDs.
+ Access outputs from other Terraform configuration.
+ Incorporate data from external systems or API.
 
 ### Example:
 
@@ -68,7 +68,7 @@ resource "aws_instance" "web" {
 
 ## ✅ Best Practices
 
-- **Pin Provider Versions** Specify exact versions to prevent unexpected changes due to update.
-- **Use Data Sources for Existing Resources** Avoid duplicating infrastructure by referencing existing resource.
-- **Avoid Hardcoding** Utilize data sources to dynamically fetch information, reducing hardcoded value.
-- **Organize Configuration** Separate provider configurations and data sources for clarity and maintainabilit.
+- **Pin Provider Versions** Specify exact versions to prevent unexpected changes due to update.
+- **Use Data Sources for Existing Resources** Avoid duplicating infrastructure by referencing existing resource.
+- **Avoid Hardcoding** Utilize data sources to dynamically fetch information, reducing hardcoded value.
+- **Organize Configuration** Separate provider configurations and data sources for clarity and maintainabilit.
