--- a/03.03-State-Exam.MD
+++ b/03.03-State-Exam.MD
@@ -173,3 +173,16 @@ A) Terraform deletes the resources
 B) Terraform merges the state with `default`  
 C) Terraform only removes the state reference, not the actual resources  
 D) It resets all variables  
+
+| **#** | **Answer** |      | **#** | **Answer** |      | **#** | **Answer** |
+|------:|:----------:|------|------:|:----------:|------|------:|:----------:|
+| 1     | B          |      | 11    | A          |      | 21    | C          |
+| 2     | C          |      | 12    | B          |      | 22    | B          |
+| 3     | C          |      | 13    | C          |      | 23    | B          |
+| 4     | B          |      | 14    | C          |      | 24    | C          |
+| 5     | C          |      | 15    | C          |      | 25    | B          |
+| 6     | B          |      | 16    | C          |      | 26    | B          |
+| 7     | C          |      | 17    | B          |      | 27    | C          |
+| 8     | C          |      | 18    | C          |      | 28    | A          |
+| 9     | C          |      | 19    | A          |      | 29    | C          |
+| 10    | C          |      | 20    | C          |      | 30    | C          |
