--- a/04.02-Variables-Exam.MD
+++ b/04.02-Variables-Exam.MD
@@ -198,3 +198,37 @@
     B) To pass the values that need to be used outside the module  
     C) To define which resources will be created in the module  
     D) To specify the resources to be destroyed  
+
+
+| **Question #** | **Answer** |
+|----------------|------------|
+| 1              | A) `string` |
+| 2              | B) To restrict invalid inputs to a variable |
+| 3              | C) `sensitive = true` in the variable block |
+| 4              | C) `number` |
+| 5              | A) `list(string)` |
+| 6              | B) It provides a user-readable explanation of the variable's purpose |
+| 7              | B) `["item1", "item2"]` |
+| 8              | A) `set(string)` |
+| 9              | C) `set` |
+| 10             | C) A mixed collection of one string followed by one number |
+| 11             | B) It hides the value from logs, plans, and outputs |
+| 12             | D) They are hidden in Terraform logs and outputs when marked as `sensitive = true` |
+| 13             | C) `instance_count` |
+| 14             | B) It ensures the variable's value meets certain criteria |
+| 15             | B) To restrict the variable to a specific value range, like `port >= 1024 && port <= 65535` |
+| 16             | C) Stop and display an error message |
+| 17             | D) `condition = var.region == "us-east-1"` |
+| 18             | C) "Port must be between 1024 and 65535" |
+| 19             | C) `string` |
+| 20             | B) It stores a collection of key-value pairs |
+| 21             | C) `map(string, number)` |
+| 22             | A) `tuple([string, number, bool])` |
+| 23             | C) `object({name = string, age = number})` |
+| 24             | C) To display the values to the user after `terraform apply` |
+| 25             | A) `sensitive = true` in the `output` block |
+| 26             | B) `output "instance_ip" { value = aws_instance.web.public_ip }` |
+| 27             | C) `terraform output` |
+| 28             | A) Use `terraform_remote_state` data source |
+| 29             | B) Returns the public IP of the EC2 instance after apply |
+| 30             | B) To pass the values that need to be used outside the module |
