--- a/04.02-Variables-Exam.MD
+++ b/04.02-Variables-Exam.MD
@@ -200,35 +200,35 @@
     D) To specify the resources to be destroyed  
 
 
-| **Question #** | **Answer** |
-|----------------|------------|
-| 1              | A) `string` |
-| 2              | B) To restrict invalid inputs to a variable |
-| 3              | C) `sensitive = true` in the variable block |
-| 4              | C) `number` |
-| 5              | A) `list(string)` |
-| 6              | B) It provides a user-readable explanation of the variable's purpose |
-| 7              | B) `["item1", "item2"]` |
-| 8              | A) `set(string)` |
-| 9              | C) `set` |
-| 10             | C) A mixed collection of one string followed by one number |
-| 11             | B) It hides the value from logs, plans, and outputs |
-| 12             | D) They are hidden in Terraform logs and outputs when marked as `sensitive = true` |
-| 13             | C) `instance_count` |
-| 14             | B) It ensures the variable's value meets certain criteria |
-| 15             | B) To restrict the variable to a specific value range, like `port >= 1024 && port <= 65535` |
-| 16             | C) Stop and display an error message |
-| 17             | D) `condition = var.region == "us-east-1"` |
-| 18             | C) "Port must be between 1024 and 65535" |
-| 19             | C) `string` |
-| 20             | B) It stores a collection of key-value pairs |
-| 21             | C) `map(string, number)` |
-| 22             | A) `tuple([string, number, bool])` |
-| 23             | C) `object({name = string, age = number})` |
-| 24             | C) To display the values to the user after `terraform apply` |
-| 25             | A) `sensitive = true` in the `output` block |
-| 26             | B) `output "instance_ip" { value = aws_instance.web.public_ip }` |
-| 27             | C) `terraform output` |
-| 28             | A) Use `terraform_remote_state` data source |
-| 29             | B) Returns the public IP of the EC2 instance after apply |
-| 30             | B) To pass the values that need to be used outside the module |
+| #  | Question Topic                | Correct Answer | Explanation (Optional Notes)                                          |
+|----|-------------------------------|----------------|------------------------------------------------------------------------|
+| 1  | Variable Type for Password    | A) string       | Passwords are stored as text.                                         |
+| 2  | Purpose of Validation Block   | B) To restrict invalid inputs     | Ensures inputs meet expected criteria.                                |
+| 3  | Define Sensitive Variable     | C) sensitive = true in the variable block | Marks value as sensitive, hides in output/logs.                       |
+| 4  | Type for VM Count             | C) number       | Numerical value for count.                                            |
+| 5  | Type for AZ List              | A) list(string) | List of string items.                                                 |
+| 6  | Description Purpose           | B) User-readable explanation     | Helps describe variable purpose.                                      |
+| 7  | Define List of Strings        | B) ["item1", "item2"] | Correct HCL syntax.                                                   |
+| 8  | Set of Unique Regions         | A) set(string)  | `set()` stores unique, unordered strings.                             |
+| 9  | Unordered, Unique Collection  | C) set          | Only sets are unordered and unique.                                   |
+| 10 | Tuple Type Matching           | C) One string followed by one number | Tuples enforce strict type and order.                                 |
+| 11 | Sensitive Variable Behavior   | B) Hides value from logs/outputs | Still stored in state but hidden from console.                        |
+| 12 | Sensitive Variable Visibility | D) Hidden when marked sensitive  | Prevents accidental exposure.                                         |
+| 13 | NOT a Sensitive Variable      | C) instance_count | It's not secret data.                                                 |
+| 14 | Purpose of Validation Condition | B) Ensures valid value        | Enforces constraints.                                                 |
+| 15 | Use Case of Validation Block  | B) Restrict value ranges         | Example: validating port numbers.                                     |
+| 16 | Validation Failure Behavior   | C) Stop and display error        | Terraform won't proceed.                                              |
+| 17 | Invalid Validation Condition  | B) `var.email matches`...        | `matches` is not valid syntax.                                        |
+| 18 | Valid Error Message           | C) "Port must be between 1024 and 65535" | Descriptive and appropriate.                                          |
+| 19 | NOT a Complex Type            | C) string       | It’s a primitive type.                                                |
+| 20 | Key Trait of map              | B) Key-value pairs               | Like dictionaries.                                                    |
+| 21 | Map with Number Values        | B) map(number)   | Keys are strings by default.                                          |
+| 22 | Tuple with Mixed Types        | A) tuple([string, number, bool]) | Type and order are fixed.                                             |
+| 23 | Object Type Syntax            | C) object({name = string, age = number}) | Defines keys and types.                                               |
+| 24 | Output Purpose                | C) Display values after apply    | Often used to show IPs, IDs, etc.                                     |
+| 25 | Mark Output as Sensitive      | A) sensitive = true in the output block | Prevents it from showing in CLI.                                     |
+| 26 | Non-sensitive Output Example  | B) output "instance_ip" ...      | Public IP is not sensitive by default.                                |
+| 27 | View Outputs Command          | C) terraform output              | Shows current output values.                                          |
+| 28 | Reference Output in Other Config | A) terraform_remote_state data source | Allows reuse of values from another state.                            |
+| 29 | Meaning of Output Block       | B) Returns public IP             | `value` points to a resource attribute.                               |
+| 30 | Use of Output in Module       | B) Pass values outside the module | Makes internal values available to callers.                           |
