--- a/09.02-Commands-And-Terraform-Config.MD
+++ b/09.02-Commands-And-Terraform-Config.MD
@@ -197,3 +197,36 @@
     - b) Terraform will recreate the file on the next `apply`
     - c) Terraform will run a refresh command automatically
     - d) It has no effect on Terraform’s state management
+
+| #  | Answer | Explanation |
+|----|--------|-------------|
+| 1  | b) `terraform fmt` | `terraform fmt` automatically formats code for consistent style. |
+| 2  | a) `terraform import` | This command brings existing infrastructure under Terraform's control. |
+| 3  | c) Creates an execution plan to show changes before applying them | `terraform plan` lets you preview changes before applying them. |
+| 4  | a) By using the `required_providers` block | This block explicitly declares provider versions for reproducibility. |
+| 5  | a) `terraform validate` | Checks for syntax and internal consistency without applying anything. |
+| 6  | c) To apply changes to the infrastructure as per the execution plan | This is the main command used to execute changes. |
+| 7  | c) `terraform plan` | While `validate` checks syntax, `plan` reveals actual infrastructure changes. |
+| 8  | a) `terraform refresh` | Updates the state file to reflect real-world resources. |
+| 9  | a) `terraform destroy` | Safely tears down all infrastructure defined in the config. |
+| 10 | c) Using the `module` block with named parameters | Modules accept inputs via parameters passed into their block. |
+| 11 | b) Marks a resource as needing to be replaced during the next `terraform apply` | The `taint` command is now deprecated in favor of `-replace`. |
+| 12 | a) To generate a visual representation of the resource dependencies | Helpful for understanding complex dependencies. |
+| 13 | a) `terraform init` | Initializes modules and downloads providers. Must be run before other commands. |
+| 14 | a) It will replace the resource by destroying and recreating it | The `-replace` flag forces recreation of a resource. |
+| 15 | a) To retrieve the values of output variables from the Terraform state | Used for automation or integration with other tools. |
+| 16 | a) By specifying the provider version in the `required_providers` block | Ensures version consistency across environments. |
+| 17 | a) It controls how many times the resource is created based on a number | `count` allows you to define multiple identical resources. |
+| 18 | a) By using separate state files and different workspaces | Best practice for managing different environments. |
+| 19 | a) It allows creating multiple instances of a resource for each item in a map or list | `for_each` enables dynamic resource creation. |
+| 20 | a) To provide an interactive console for testing expressions | The `console` is great for debugging and expression evaluation. |
+| 21 | a) `provider "aws" { region = "us-west-2" }` | Correct syntax for declaring a provider and setting a region. |
+| 22 | a) `required_version = ">= 0.12"` | Declared under the `terraform` block to enforce version constraints. |
+| 23 | a) Syntax errors and internal consistency | Ensures code is well-formed before execution. |
+| 24 | a) Store state remotely using a backend like S3 or Consul | Enables team collaboration and locks. |
+| 25 | a) `module.<module_name>.<output_name>` | Correct way to reference outputs from modules. |
+| 26 | a) It destroys the entire Terraform-managed infrastructure | `-destroy` is a flag that tells apply to do a full teardown. |
+| 27 | a) `terraform console` | Great for exploring resources, variables, and expressions interactively. |
+| 28 | a) By specifying the source in the `module` block | Modules are referenced using a `source`, often from the registry. |
+| 29 | a) To view the changes that Terraform will make without actually applying them | Helps you review and verify proposed changes. |
+| 30 | a) Terraform will be unable to track any resources and needs to be reinitialized | Deleting the state file breaks tracking of resources. |
