--- a/01.02-Introduction-Exam.MD
+++ b/01.02-Introduction-Exam.MD
@@ -218,35 +218,35 @@ D. Create a `.tf` file
 
 ---
 
-| #  | Answer |
-|----|--------|
-| 1  | C      |
-| 2  | B      |
-| 3  | B      |
-| 4  | False  |
-| 5  | C      |
-| 6  | C      |
-| 7  | C      |
-| 8  | B      |
-| 9  | A      |
-| 10 | C      |
-| 11 | False  |
-| 12 | C      |
-| 13 | D      |
-| 14 | C      |
-| 15 | True   |
-| 16 | D      |
-| 17 | C      |
-| 18 | False  |
-| 19 | B      |
-| 20 | C      |
-| 21 | C      |
-| 22 | C      |
-| 23 | B      |
-| 24 | B      |
-| 25 | D      |
-| 26 | A      |
-| 27 | C      |
-| 28 | D      |
-| 29 | B      |
-| 30 | False  |
+| #  | Answer | Reasoning |
+|----|--------|-----------|
+| 1  | C      | IaC automates provisioning using code, enabling repeatable, consistent, and version-controlled infrastructure deployment. |
+| 2  | B      | Snowflake environments are unique and hard to reproduce; IaC eliminates them by enforcing consistency through code. |
+| 3  | B      | Manual intervention is exactly what IaC seeks to reduce or eliminate through automation. |
+| 4  | False  | Terraform is **declarative**, not imperative; you define the desired state, and Terraform figures out the steps. |
+| 5  | C      | Declarative statements express **what** should exist (like EC2 in a region), not **how** to make it happen. |
+| 6  | C      | Terraform uses a declarative language to define the desired state of infrastructure. |
+| 7  | C      | The typical workflow is: **Write** the code → **Plan** to see changes → **Apply** to execute them. |
+| 8  | B      | `terraform init` doesn’t format code — `terraform fmt` does that. |
+| 9  | A      | When a new provider is added, `init` is required to download necessary plugins. |
+| 10 | C      | `terraform plan` shows what changes would be made without applying them — it’s a dry run. |
+| 11 | False  | It only **plans** the changes; it doesn't make any modifications to infrastructure. |
+| 12 | C      | After applying, Terraform updates the `terraform.tfstate` file with the current state of resources. |
+| 13 | D      | Terraform stores state in a file named `terraform.tfstate` by default. |
+| 14 | C      | `terraform destroy` is the official command to delete all managed infrastructure. |
+| 15 | True   | Terraform must read the state to know what resources exist before it can destroy them. |
+| 16 | D      | `terraform fmt` automatically formats `.tf` files to canonical style. |
+| 17 | C      | `terraform validate` checks for syntax errors and config structure validity — not provider access. |
+| 18 | False  | `terraform validate` checks **syntax**, not your cloud provider credentials. |
+| 19 | B      | `terraform output` shows values defined in `output` blocks, which help surface key information. |
+| 20 | C      | `terraform show` displays the state file contents in a human-readable way. |
+| 21 | C      | Version control via GitHub enables collaboration, review, and CI/CD automation of infrastructure. |
+| 22 | C      | Terraform files have a `.tf` extension. |
+| 23 | B      | Reviewing the plan ensures you know exactly what changes will happen before applying. |
+| 24 | B      | You must initialize the directory with `terraform init` to install providers and set up the backend. |
+| 25 | D      | The state file tracks real infrastructure that Terraform manages to detect drift and apply diffs. |
+| 26 | A      | If the state file is missing, Terraform cannot track or manage resources properly and will error out. |
+| 27 | C      | `terraform output` is specifically for displaying values from declared output blocks in your config. |
+| 28 | D      | All listed package managers (`brew`, `apt`, `yum`) can install Terraform, depending on your OS. |
+| 29 | B      | Adding Terraform to `$PATH` allows you to run it from anywhere in your shell. |
+| 30 | False  | After installation or modifying `$PATH`, you often need to **restart the shell** or source your profile. |
