--- a/03.03-State-Exam.MD
+++ b/03.03-State-Exam.MD
@@ -174,15 +174,35 @@ B) Terraform merges the state with `default`
 C) Terraform only removes the state reference, not the actual resources  
 D) It resets all variables  
 
-| **#** | **Answer** |      | **#** | **Answer** |      | **#** | **Answer** |
-|------:|:----------:|------|------:|:----------:|------|------:|:----------:|
-| 1     | B          |      | 11    | A          |      | 21    | C          |
-| 2     | C          |      | 12    | B          |      | 22    | B          |
-| 3     | C          |      | 13    | C          |      | 23    | B          |
-| 4     | B          |      | 14    | C          |      | 24    | C          |
-| 5     | C          |      | 15    | C          |      | 25    | B          |
-| 6     | B          |      | 16    | C          |      | 26    | B          |
-| 7     | C          |      | 17    | B          |      | 27    | C          |
-| 8     | C          |      | 18    | C          |      | 28    | A          |
-| 9     | C          |      | 19    | A          |      | 29    | C          |
-| 10    | C          |      | 20    | C          |      | 30    | C          |
+| **#** | **Answer** | **Reasoning** |
+|------:|:----------:|-------------------------------------------------------------------------------------------------------------------------------------|
+| 1     | B          | Terraform state files track metadata, dependencies, and current status of resources, allowing Terraform to manage infrastructure properly. |
+| 2     | C          | By default, Terraform stores the `terraform.tfstate` file locally on your machine. |
+| 3     | C          | The default filename for state is `terraform.tfstate`. |
+| 4     | B          | `terraform state list` shows all resources currently tracked in the state. |
+| 5     | C          | This command stops Terraform from managing the resource, but does **not** delete it in the cloud. |
+| 6     | B          | State locking prevents simultaneous modifications by multiple users, avoiding conflicts and corruption. |
+| 7     | C          | AWS S3 backend supports remote state with locking via DynamoDB. |
+| 8     | C          | `terraform state pull` fetches the most recent remote state file. |
+| 9     | C          | Manually editing can cause the state to no longer match real infrastructure, leading to issues. |
+| 10    | C          | `terraform state mv` is used to move a resource from one state address to another. |
+| 11    | A (True)   | The state file may contain sensitive outputs like passwords and private keys unless explicitly redacted. |
+| 12    | B (False)  | Terraform does **not** automatically encrypt local state; you must handle that manually. |
+| 13    | C          | `terraform state push` uploads a local state file to the remote backend. |
+| 14    | C          | This command updates provider references within the state file without changing configurations. |
+| 15    | C          | Local state is unsuitable for teams as it prevents collaboration, versioning, and locking. |
+| 16    | C          | Workspaces isolate state files, allowing separate environments with the same code. |
+| 17    | B          | Terraform automatically creates a `default` workspace on initialization. |
+| 18    | C          | The correct syntax is `terraform workspace new dev` to create a new workspace. |
+| 19    | A          | Use `terraform workspace select <name>` to switch between workspaces. |
+| 20    | C          | Each workspace has a separate state, so switching and applying deploys a **new** set of infrastructure. |
+| 21    | C          | Workspaces allow using the same codebase across dev/test/prod environments with isolated state. |
+| 22    | B (False)  | Workspaces do not automatically encrypt state; backend configuration must handle encryption. |
+| 23    | B          | S3 backend organizes state files in folders named after the workspace. |
+| 24    | C          | The `terraform.workspace` interpolation returns the name of the current workspace. |
+| 25    | B          | Yes, the same config is usable across workspaces — only the state is separated. |
+| 26    | B          | Variables are not isolated by workspaces unless you explicitly configure them to be. |
+| 27    | C          | State locking (via backend like S3 + DynamoDB) avoids race conditions during concurrent applies. |
+| 28    | A (True)   | If infrastructure is *very* different, use separate workspaces or even separate codebases. |
+| 29    | C          | Use `${terraform.workspace}` to reference the active workspace in your configuration. |
+| 30    | C          | Deleting a workspace removes its state file, but does **not** destroy the actual cloud resources. |
