--- a/01.01-Introduction.MD
+++ b/01.01-Introduction.MD
@@ -1,112 +1,137 @@
 ## 🧱 1. What is Infrastructure as Code (IaC)?
 
+Before diving into Terraform, it's essential to understand the broader concept it belongs to: **Infrastructure as Code** (IaC). This practice transforms the way infrastructure is managed, shifting from manual provisioning to automated, version-controlled code.
+
+---
+
 ### 🔹 Definition
+
 **Infrastructure as Code** is the practice of managing and provisioning infrastructure (servers, networks, databases, etc.) through **machine-readable configuration files** rather than manual processes or GUIs.
 
 ---
 
 ### 🔹 Key Benefits
 
-✅ **Repeatability & Consistency**
-- Avoids "snowflake" environments by codifying every infrastructure component.
+✅ **Repeatability & Consistency**  
+- Avoids "snowflake" environments by codifying every infrastructure component.  
 - Every deployment is predictable and repeatable.
 
-✅ **Version Control & Auditability**
-- Code can be stored in Git (or other VCS), reviewed, tracked, and reverted.
-- Teams can collaborate on infrastructure the same way they do with application code.
+✅ **Version Control & Auditability**  
+- Code can be stored in Git (or other VCS), reviewed, tracked, and reverted.  
+- Teams collaborate on infrastructure like they do on application code.
 
-✅ **Automated Deployment**
-- IaC allows automation pipelines to provision, update, or tear down infrastructure **without human interaction**.
+✅ **Automated Deployment**  
+- IaC enables automation pipelines to provision, update, or tear down infrastructure **without human intervention**.
 
-✅ **Speed & Efficiency**
-- Reduces the manual overhead of navigating web portals or CLIs.
+✅ **Speed & Efficiency**  
+- Reduces time spent navigating GUIs or manually typing CLI commands.
 
-✅ **Reduced Risk**
+✅ **Reduced Risk**  
 - Minimizes misconfigurations and human error.
 
-✅ **Cost Optimization**
+✅ **Cost Optimization**  
 - Automatically destroy unused resources to avoid unnecessary cloud bills.
 
 ---
 
-### 🔹 Declarative vs Imperative
+### 🔹 Declarative vs Imperative Approaches
 
-| Declarative                        | Imperative                          |
-|-----------------------------------|-------------------------------------|
-| You **describe the desired state**| You **specify step-by-step** how to achieve it |
-| Terraform is **declarative**      | Shell scripts, Ansible (sometimes) are imperative |
-| Example: “I want 3 EC2 instances” | Example: “Run this script to create EC2 instance” |
+| Declarative                            | Imperative                             |
+|---------------------------------------|----------------------------------------|
+| You **describe the desired state**    | You **specify step-by-step** how to achieve it |
+| Terraform is **declarative**          | Shell scripts, Ansible (in some cases) are imperative |
+| Example: “I want 3 EC2 instances”     | Example: “Run this script to create EC2 instances” |
+
+📝 **Bonus Code Examples**:
+
+- **Declarative (Terraform)**:
+  ```hcl
+  resource "aws_instance" "example" {
+    count = 3
+    ami           = "ami-abc123"
+    instance_type = "t2.micro"
+  }
+  ```
+
+- **Imperative (Bash)**:
+  ```bash
+  aws ec2 run-instances --image-id ami-abc123 --count 1 --instance-type t2.micro
+  aws ec2 run-instances --image-id ami-abc123 --count 1 --instance-type t2.micro
+  aws ec2 run-instances --image-id ami-abc123 --count 1 --instance-type t2.micro
+  ```
 
 ---
 
 ## 🧩 2. Terraform Workflow (Standard Lifecycle)
 
-Terraform follows a consistent 3-phase workflow:
+Terraform operates through a predictable and consistent 3-phase lifecycle. This structure simplifies infrastructure management and aligns with best practices.
 
 ---
 
 ### 🟪 1. **Write**
 
-- Write Terraform configuration files using `.tf` or `.tf.json`.
-- Files describe the infrastructure and use:
+- Create Terraform configuration files (`.tf` or `.tf.json`) that define:
   - **Resources** (infrastructure components)
   - **Data sources**
   - **Variables & outputs**
   - **Modules**
 
-✅ Best Practice: Store the code in a **GitHub repo** for collaboration and CI/CD.
+✅ **Best Practice**: Store the code in a **GitHub repo** for versioning, collaboration, and CI/CD workflows.
 
 ---
 
 ### 🟪 2. **Plan**
 
-Use the `terraform plan` command to:
-- See what Terraform intends to do.
-- Review resource additions, changes, and deletions.
-- Safely validate changes **before** they happen.
+Use `terraform plan` to:
+- Preview what Terraform **intends to do**.
+- Safely review **additions, changes, and deletions**.
+- Validate changes **before** any action is taken.
 
 ---
 
 ### 🟪 3. **Apply**
 
-Apply your infrastructure changes using `terraform apply`:
-- Executes the plan and provisions infrastructure.
-- Changes are **recorded in the state file**.
-- Terraform compares your config with the current state to decide what actions to take.
+Use `terraform apply` to:
+- Execute the plan and **provision resources**.
+- Record changes in the **state file**, which tracks actual infrastructure.
+- Compare configuration vs current state to determine actions.
 
 ---
 
-### Bonus: **Review/Refactor Loop**
-- Refactor code over time.
-- Store modules, split files, add inputs/outputs for better reuse.
+### 🔁 Bonus: Review/Refactor Loop
+
+- Refactor your code as infrastructure evolves.
+- Extract shared code into **modules**.
+- Organize configurations using **input/output variables**, folders, and version control.
 
 ---
 
 ## 🔧 3. Core Terraform Commands – Certification Focus
+
+Familiarity with these commands is **critical for the exam** and daily use.
 
 ---
 
 ### ⚙️ `terraform init`
 
 - Initializes the Terraform working directory.
-- Downloads required providers (like AWS, Azure).
-- Installs any modules defined in your config.
-- Sets up the backend (e.g., local or remote state).
+- Downloads required **providers** (e.g., AWS, Azure).
+- Installs **modules** and sets up **backends** (local or remote).
+- Generates `.terraform.lock.hcl` to lock provider versions.
 
-📌 **Must be run first**, anytime you:
-- Clone a repo
-- Add/change providers
-- Change backends
+📌 Must run this **first** when:
+- Starting a new project
+- Cloning a Terraform repo
+- Changing provider requirements
+- Switching or modifying backends
 
 ---
 
 ### 🧐 `terraform plan`
 
-- Creates an **execution plan**.
-- Shows what actions will be taken.
-- Does **not** make any changes.
-
-✅ Useful for code review or approval processes.
+- Generates and displays an **execution plan**.
+- Shows exactly what Terraform **would do**, without performing any action.
+- Essential for **code review** and **safe infrastructure changes**.
 
 ---
 
@@ -114,59 +139,70 @@ Apply your infrastructure changes using `terraform apply`:
 
 - Applies the infrastructure changes.
 - Prompts for confirmation unless `-auto-approve` is used.
-- Updates the **state file** after execution.
+- Updates the **state file** upon completion.
 
-📁 Terraform State File:
-- Tracks real infrastructure resources
-- By default, stored as `terraform.tfstate` (can be remote in S3, etc.)
+📁 **Terraform State File**:
+- Stored as `terraform.tfstate` (by default).
+- May be stored remotely (e.g., S3, Terraform Cloud).
+- Represents the single source of truth for infrastructure.
 
 ---
 
 ### 💣 `terraform destroy`
 
-- Destroys **all** resources defined in your config.
-- Uses the state file to identify what to destroy.
-- **Irreversible!** Always double-check and back up your state.
+- Destroys all resources defined in the configuration.
+- Uses the state file to determine what to destroy.
+
+⚠️ **Irreversible**. Always backup your state and double-check before running.
 
 ---
 
-### 🧼 `terraform fmt` (formatting)
+### 🧼 `terraform fmt`
 
-- Formats `.tf` files to Terraform's standard style.
-- Keeps code clean and consistent.
+- Formats your `.tf` files using Terraform’s standard style guide.
+- Helps maintain consistency across teams.
 
 ---
 
 ### ✅ `terraform validate`
 
-- Validates configuration files for syntax and internal logic.
-- Does **not** access providers or state.
+- Checks the configuration for **syntax errors** and **logical issues**.
+- Does not connect to any cloud provider or evaluate state.
 
 ---
 
 ### 🧠 `terraform show`, `terraform output`
 
-- `show`: Displays the current state
-- `output`: Displays values from the `output` blocks
+- `terraform show`: Displays current state details.
+- `terraform output`: Displays outputs defined in your configuration.
 
 ---
 
-## 📦 4. Installing Terraform – For Hands-On Exam Practice
+### 🧩 Optional but Helpful: `terraform graph`
+
+- Generates a visual dependency graph in DOT format.
+- Helps you **understand resource relationships** and execution order.
+
+---
+
+## 📦 4. Installing Terraform – For Hands-On Practice
+
+To follow along and try examples, install Terraform on your machine.
 
 ---
 
 ### 🔹 Method 1: Manual Installation
 
-1. Go to: [terraform.io/downloads](https://terraform.io/downloads)
-2. Download appropriate binary (based on OS)
-3. Unzip the binary
+1. Visit [terraform.io/downloads](https://terraform.io/downloads)  
+2. Download the binary for your OS  
+3. Unzip it  
 4. Move it to a directory in your system’s `$PATH` (e.g., `/usr/local/bin`)
 
 ---
 
-### 🔹 Method 2: Use a Package Manager (Linux)
+### 🔹 Method 2: Use a Package Manager
 
-#### Debian/Ubuntu:
+#### 🐧 Debian/Ubuntu:
 ```bash
 sudo apt-get update && sudo apt-get install -y gnupg software-properties-common
 wget -O- https://apt.releases.hashicorp.com/gpg | gpg --dearmor | sudo tee /usr/share/keyrings/hashicorp-archive-keyring.gpg
@@ -175,7 +211,7 @@ sudo apt update
 sudo apt install terraform
 ```
 
-#### RHEL/Amazon Linux:
+#### 🟤 RHEL/Amazon Linux:
 ```bash
 sudo yum install -y yum-utils
 sudo yum-config-manager --add-repo https://rpm.releases.hashicorp.com/AmazonLinux/hashicorp.repo
@@ -186,17 +222,21 @@ sudo yum -y install terraform
 
 ## 📘 Extra Tips for the Exam
 
-📝 **Expect questions around:**
-- Declarative vs imperative IaC
-- Benefits of IaC (e.g., versioning, automation)
-- Terraform workflow (init → plan → apply)
-- State file and its importance
-- Common commands and their purpose
-- Safe usage of `destroy`
-- Install paths and CLI basics
+📝 You should be confident with:
+- Declarative vs imperative definitions
+- Key IaC benefits: versioning, automation, repeatability
+- Terraform's standard workflow (init → plan → apply)
+- State file purpose and location
+- Major CLI commands and when to use them
+- Safe practices around `destroy`
+- Installing and managing versions
 
-🧪 Practice Scenarios:
-- “What happens if you run `terraform apply` without `terraform init`?”
-- “You want to see what Terraform will do but not make changes. What command?”
-- “You need to change 3 AWS resources. How can you see a summary first?”
-- “Where is the state stored by default?”
+---
+
+### 🧪 Sample Exam-Style Questions
+
+- ❓ What happens if you run `terraform apply` without running `terraform init`?
+- ❓ You want to preview changes but not execute anything. What command do you use?
+- ❓ You’ve updated your code to modify 3 AWS resources. How can you review what will happen?
+- ❓ Where is the Terraform state stored by default?
+- ❓ What file locks provider versions to ensure consistent runs?
