--- a/01.03-Introduction-Exam.MD
+++ b/01.03-Introduction-Exam.MD
@@ -218,6 +218,74 @@ D. Create a `.tf` file
 
 ---
 
+### **31. What is the purpose of `.terraform.lock.hcl`?**  
+A. Stores remote backend configuration  
+B. Tracks provider versions and checksums  
+C. Contains output values  
+D. Manages remote workspaces
+
+---
+
+### **32. When is `.terraform.lock.hcl` generated?**  
+A. After `terraform plan`  
+B. During `terraform apply`  
+C. During `terraform init`  
+D. When a `.tf` file is created
+
+---
+
+### **33. True or False:** The lock file must be manually created by the user.
+
+---
+
+### **34. What does the lock file help prevent?**  
+A. Remote state corruption  
+B. Syntax errors  
+C. Unintended provider version upgrades  
+D. IAM permission issues
+
+---
+
+### **35. What command updates the lock file with newer provider versions?**  
+A. `terraform update-lock`  
+B. `terraform validate`  
+C. `terraform init -upgrade`  
+D. `terraform upgrade-lock`
+
+---
+
+### **36. True or False:** You should commit `.terraform.lock.hcl` to version control.
+
+---
+
+### **37. What happens if `.terraform.lock.hcl` is missing from a project?**  
+A. Terraform will error out and exit  
+B. Terraform will regenerate it on the next `terraform init`  
+C. Terraform will skip using any providers  
+D. Terraform will download all available providers
+
+---
+
+### **38. What is stored in the lock file besides provider versions?**  
+A. Resource count  
+B. State data  
+C. Provider binary checksums  
+D. Variable definitions
+
+---
+
+### **39. Why are checksums included in the lock file?**  
+A. To calculate infrastructure cost  
+B. To verify binary integrity and security  
+C. To measure deployment time  
+D. To list required inputs
+
+---
+
+### **40. True or False:** The lock file affects how Terraform plans and applies changes to resources.
+
+---
+
 | #  | Answer | Reasoning |
 |----|--------|-----------|
 | 1  | C      | IaC automates provisioning using code, enabling repeatable, consistent, and version-controlled infrastructure deployment. |
@@ -250,3 +318,13 @@ D. Create a `.tf` file
 | 28 | D      | All listed package managers (`brew`, `apt`, `yum`) can install Terraform, depending on your OS. |
 | 29 | B      | Adding Terraform to `$PATH` allows you to run it from anywhere in your shell. |
 | 30 | False  | After installation or modifying `$PATH`, you often need to **restart the shell** or source your profile. |
+| 31  | B      | The `.terraform.lock.hcl` file tracks exact provider versions and their checksums for consistency and reproducibility. |
+| 32  | C      | The lock file is automatically created or updated when you run `terraform init`. |
+| 33  | False  | Terraform generates this file automatically; no need for manual creation. |
+| 34  | C      | The lock file ensures Terraform uses the exact same provider versions across runs, avoiding unexpected changes. |
+| 35  | C      | `terraform init -upgrade` updates the lock file with newer versions of providers. |
+| 36  | True   | It’s best practice to commit the lock file so all team members use the same provider versions. |
+| 37  | B      | If missing, Terraform will regenerate it during the next `terraform init`. |
+| 38  | C      | It stores cryptographic checksums for each provider binary to ensure integrity. |
+| 39  | B      | Checksums validate that provider binaries haven’t been tampered with — a security measure. |
+| 40  | False  | The lock file affects provider versions, but **not** the infrastructure plan or resource logic. |
