Update and rename 02.04-Resources-Exam.MD to 02.05-Resources-Exam.MD

--- a/02.05-Resources-Exam.MD
+++ b/02.05-Resources-Exam.MD
@@ -117,6 +117,69 @@
 
 ---
 
+### 🔢 **Multiple Choice (Single Answer)**
+
+31. What does the following command do?  
+```bash
+terraform state rm aws_instance.web
+```
+- A. Deletes the instance in AWS  
+- B. Ignores changes to the instance  
+- C. Removes the resource from Terraform's state  
+- D. Moves the resource to another workspace
+
+---
+
+32. What is the **main difference** between `count` and `for_each`?
+- A. `for_each` works only with numbers  
+- B. `count` cannot be used with modules  
+- C. `for_each` allows more descriptive indexing (e.g., by key)  
+- D. `count` creates resources based on a map or set
+
+---
+
+33. Which command allows you to **rename or refactor** resources in the state?
+- A. `terraform refresh`  
+- B. `terraform import`  
+- C. `terraform state mv`  
+- D. `terraform apply`
+
+---
+
+34. What happens if you **change the name** of a resource block without migrating state?
+- A. Terraform will do nothing  
+- B. Terraform will throw an error  
+- C. Terraform will try to recreate the resource  
+- D. Terraform will automatically detect and rename the resource
+
+---
+
+35. How do you **conditionally** create a resource?
+- A. Use `ignore_changes` in the resource block  
+- B. Wrap the resource block in an `if` statement  
+- C. Use `count = var.enabled ? 1 : 0`  
+- D. Use `depends_on = false`
+
+---
+
+### 🧠 **True or False**
+
+36. You can use both `count` and `for_each` on the same resource block.
+
+37. Removing a resource from state will also delete the real infrastructure.
+
+38. Provisioners run every time Terraform applies a plan.
+
+---
+
+### 📌 **Fill in the Blank**
+
+39. The `dynamic` block is commonly used to generate __________ blocks inside a resource.
+
+40. The command `terraform taint` marks a resource for __________ on the next apply.
+
+---
+
 ## ✅ **Answers – Terraform Resource Practice**
 
 ### 🔢 **Multiple Choice (Single Answer)**
@@ -173,3 +236,28 @@
 28. **To avoid accidental deletion of critical infrastructure like databases or IAM roles**  
 29. **`aws_instance.web[1].id`**  
 30. **Write the matching resource block in configuration manually**
+
+---
+
+### 🔢 **Multiple Choice**
+
+31. **C** – Removes the resource from Terraform’s state  
+32. **C** – `for_each` allows more descriptive indexing  
+33. **C** – `terraform state mv`  
+34. **C** – Terraform will try to recreate the resource  
+35. **C** – `count = var.enabled ? 1 : 0`
+
+---
+
+### 🧠 **True or False**
+
+36. **False** – You can only use one: `count` **or** `for_each`  
+37. **False** – State is removed, but infrastructure stays untouched  
+38. **False** – Provisioners only run under certain lifecycle conditions (e.g., creation)
+
+---
+
+### 📌 **Fill in the Blank**
+
+39. **nested**  
+40. **recreation**
