--- a/02.03-Resources-Providers&Data.MD
+++ b/02.03-Resources-Providers&Data.MD
@@ -71,4 +71,4 @@ resource "aws_instance" "web" {
 - **Pin Provider Versions** Specify exact versions to prevent unexpected changes due to update.
 - **Use Data Sources for Existing Resources** Avoid duplicating infrastructure by referencing existing resource.
 - **Avoid Hardcoding** Utilize data sources to dynamically fetch information, reducing hardcoded value.
-- **Organize Configuration** Separate provider configurations and data sources for clarity and maintainabilit.
+- **Organize Configuration** Separate provider configurations and data sources for clarity and maintainability.
